<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/reservas_home"
        android:icon="@drawable/cita"
        android:title="Reservas">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/casa"
                android:title="Home"/>
            <item
                android:id="@+id/listado"
                android:icon="@drawable/lista"
                android:title="Listado"/>
            <item
                android:id="@+id/calendario"
                android:icon="@drawable/calendario"
                android:title="Calendario"/>
            <item
                android:id="@+id/pagos"
                android:icon="@drawable/card"
                android:title="Pagos"/>
            <item
                android:id="@+id/cajaChica"
                android:icon="@drawable/pagos"
                android:title="Caja Chica"/>
            <item
                android:id="@+id/comentarios"
                android:icon="@drawable/comentarios"
                android:title="Comentarios"/>
            <item
                android:id="@+id/mailing"
                android:icon="@drawable/assign"
                android:title="Mailing"/>
        </menu>
    </item>

    <item
        android:id="@+id/configuracion"
        android:icon="@drawable/configuraciones"
        android:title="Configuración"/>

    <item
        android:id="@+id/cerrar_sesion"
        android:icon="@drawable/cerrarsesion"
        android:title="Cerrar Sesión"/>
</menu>
