...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_card_correo"
    android:padding="10dp">

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_gmail"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
...
