...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_marginTop="10dp"
        android:id="@+id/switchModoOscuro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/items_config"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:text="Modo oscuro"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCorreoGmail"
        app:layout_constraintStart_toStartOf="@+id/tvCorreoGmail"
        app:layout_constraintTop_toBottomOf="@+id/tvCerrarSesionGmail" />
    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/tvCerrarSesionGlobal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/tvCorreoAPI"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreoAPI"
...
