<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    android:padding="20dp"

    tools:context=".view.activities.MainActivity">

    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar Sesión"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/ivUser"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/fondo_app"
        android:scaleType="centerCrop"
        android:src="@drawable/usuario"
        app:layout_constraintEnd_toEndOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />


    <EditText
        android:layout_marginTop="40dp"
        android:id="@+id/editCorreo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_login"
        android:drawableLeft="@drawable/sobre"
        android:hint="Correo electrónico"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/ivUser"

        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/ivUser" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_login"
        android:drawableLeft="@drawable/candado"
        android:paddingLeft="10dp"
        android:hint="Contraseña"
        android:textAlignment="center"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editCorreo"
        app:layout_constraintStart_toStartOf="@+id/editCorreo"
        app:layout_constraintTop_toBottomOf="@+id/editCorreo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/boton_personalizado"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/editPass"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_personalizado"
        android:foreground="?attr/selectableItemBackground"
        android:text="Reset"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editPass"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>